<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="masukan_berat">Masukan Berat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="masukan_tinggi">Masukan Tinggi</string>
    <string name="textCalculate">Calculate</string>
    <string name="kg">Kg</string>
    <string name="cm">Cm</string>
    <string name="bmi_kamu">BMI kamu</string>
    <string name="index_berat">Index Berat</string>
    <string name="protein_harian_yang_dibutuhkan">Protein harian yang dibutuhkan</string>
    <string name="titikdua">:</string>
    <string name="gram">Gram</string>
</resources>